== Change Log

=== Edge

* Fixed a bug which could cause the preferences submenu to dissapear [Mario Visic, Jim Gay]
* Fixed a bug PostgreSQL for creating pages with nested attributes [Andrew Cates]
* Updated to Rails 2.3.8 [Jim Gay]
* Added admin and Radius tag pagination [William Ross]
* Added will_paginate dependency [William Ross, Jim Gay]
* Added <r:gravatar/> radius tag [John Muhl]
* Exposed important view locals for partials that hook into the admin UI [Mislav Marohnić]
* Update to cucumber-rails 0.3.0 [Jim Gay]
* Update to Haml 2.2.24 [Jim Gay]

=== 0.9.0 RC2 (April 27, 2010)

* Allow loading extension routes from the extension's config/routes.rb [Jim Gay]
* Cache admin.js in update task [Janne Asmala]
* Finally rename User.protected_attributes to unprotected_attributes [Jim Gay]
* Support i18n [Keith Bingman, many others]
* Only run migrate and update tasks with script/extension if they exist [John Muhl, Jim Gay]
* Dropped BlueCloth for kramdown [John Muhl]
* Updated sample images for Textile and Markdown [Jim Gay]
* Refactored Sass to separate out common styles [Jim Gay]
* Upgraded to HAML 2.2.19 [Jim Gay]
* Add future publishing feature [Anna Billstrom, Benny Degezelle, Jim Gay]
* Fixed support for newer Cucumber version [M. Scott Ford, William Ross]
* Fixed a bug in if/unless_content tags [Benny Degezelle]
* Support packaging extensions as gems [Josh French]
* Add tag reference to Layouts and Snippets [Jim Gay]
* Handle deploying to a sub-directory [Jim Gay]
* Ensure that generator specs actually test properly [Travis D. Warlick]
* Properly display errors on user password changes [Jim Gay]
* Prevent admin from removing her own admin privilege [Jim Gay]
* Move to Rails 2.3.5 [Jim Gay]
* Simplify admin tab API [Jim Gay, John Long, Sean Cribbs]

=== 0.9.0 RC1 (October 9, 2009)

* Turned on HAML's "ugly" whitespace mode in production [John Muhl]
* Use HTML 5 doctype. [John Muhl]
* Miscellaneous HTML standards improvements [John Muhl]